tdf#113787: gbuild: fix the version of cli_cppuhelper assembly

There is one usage of gb_Library_add_generated_cxxclrobjects in
the entire repo, and regrettably generated C++/CLR objects
weren't actually implemented in the new build system, so the
assembly.cxx with its generated version number was simply ignored.